<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TextView
                android:id="@+id/txtOppLife"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="#DF0000"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="60sp" />

            <LinearLayout
                android:id="@+id/LayOppCalc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnOppPlus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/bangers"
                    android:onClick="btnOppLifePlus"
                    android:text="@string/strLifeOppPlus"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/btnOppMinus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnOppLifeMinus"
                    android:text="@string/strLifeOppMinus" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TextView
                android:id="@+id/txtSelfLife"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="#003DD6"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="60sp" />

            <LinearLayout
                android:id="@+id/LayMyLife"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnMyPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btnSelfLifePlus"
                    android:text="@string/strLifeSelfPlus" />

                <Button
                    android:id="@+id/btnMyMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btnSelfLifeMinus"
                    android:text="@string/strLifeSelfMinus" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnAtk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnAttackOnPress"
                android:text="@string/strAttack" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>